--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -4,6 +4,8 @@ body {
     background-image: url(https://img.freepik.com/free-photo/businessman-with-umbrella-rainy-city_53876-98407.jpg);
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
+    background-color:rgb(91, 91, 91);
     font-size: 120%;
     font-family: forma-djr-text, sans-serif;
     font-weight: 400;
@@ -27,19 +29,23 @@ footer {
 }
 
 .card {
-    background-color: rgba(173,216,230,.6);
+    background-color: rgba(173,216,230,.6) !important;
     color: rgb(91, 91, 91);
     padding: 1em;
-    width: 100%;
+    /* width: 100%;
     max-width: 375px;
     height: 100%;
-    max-height: 375px;
+    max-height: 375px; */
     margin: 1em;
     left: 47px;
     margin-left: 15px;
     margin-bottom: 15px;
     font-family: forma-djr-text, sans-serif;
     
+}
+
+.searchButton{
+    width:40px !important;
 }
 
 #artistVideo {
